<?xml version="1.0"?>
<package format="2">
  <name>hik_tem</name>
  <version>0.0.1</version>
  <description>The hikvision_ros package</description>

  <maintainer email="tanzby@outlook.com">iceytan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_interface</depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>
  
  
  <export>
  </export>
</package>
